--- a/package.json
+++ b/package.json
@@ -2,24 +2,36 @@
   "name": "@chatgpt-improved/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev-client": "nx serve client",
+    "dev-server": "nx serve server"
+  },
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
+    "axios": "^1.0.0",
+    "express": "^4.18.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.2.1",
     "@nx/eslint-plugin": "16.2.1",
+    "@nx/express": "^16.2.1",
+    "@nx/jest": "16.2.1",
     "@nx/js": "16.2.1",
     "@nx/linter": "16.2.1",
+    "@nx/node": "16.2.1",
     "@nx/react": "16.2.1",
     "@nx/vite": "16.2.1",
+    "@nx/webpack": "16.2.1",
     "@nx/workspace": "16.2.1",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -36,10 +48,14 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
     "nx": "16.2.1",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.0.2",
     "vite": "^4.3.4",
     "vite-plugin-eslint": "^1.8.1",
