--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
+    "autoprefixer": "10.4.13",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -53,7 +54,10 @@
     "jsdom": "~20.0.3",
     "nx": "16.2.1",
     "nx-cloud": "latest",
-    "prettier": "^2.6.2",
+    "postcss": "8.4.21",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2",
