--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
+    "lint-staged": "^13.2.2",
     "nx": "16.2.1",
     "nx-cloud": "latest",
     "postcss": "8.4.21",
@@ -65,5 +67,16 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.31.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+      "*.{js,jsx,ts,tsx,json,md}": [
+        "eslint --fix",
+        "prettier --write"
+      ]
+    }
   }
 }
