--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@nx/cypress": "16.2.1",
     "@nx/eslint-plugin": "16.2.1",
     "@nx/express": "^16.2.1",
