--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "^8.0.3",
+    "husky": "4",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
@@ -71,9 +71,6 @@
     "vitest": "^0.31.0"
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    },
     "lint-staged": {
       "*.{js,jsx,ts,tsx,json,md}": [
         "eslint --fix",
