--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "git-commit-msg-linter": "^5.0.4",
     "husky": "4",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
