--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
