--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
