--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,6 +42,8 @@
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
     "autoprefixer": "10.4.13",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -58,8 +58,10 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
     "lint-staged": "^13.2.2",
+    "morgan": "^1.10.0",
     "nx": "16.2.1",
     "nx-cloud": "latest",
+    "openai": "^3.2.1",
     "postcss": "8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
