--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
-    "axios": "^1.0.0",
+    "@types/cors": "^2.8.13",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
