--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
